Fix multiple cases of overflow

--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -29,3 +29,7 @@
     border-bottom: 1px solid var(--background-highlight);
     padding-bottom: 5px;
 }
+
+#content img {
+    max-width: 100%;
+}
