--- a/src/styles/navbar/navbar.css
+++ b/src/styles/navbar/navbar.css
@@ -42,6 +42,13 @@
     flex-direction: column;
      list-style: none;
     cursor: pointer;
+    max-width: 350px;
+}
+
+#menu li span {
+    display: inline-block;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 #menu li .collapsible-label {
