--- a/src/styles/toc.css
+++ b/src/styles/toc.css
@@ -18,6 +18,7 @@
     margin: 0;
     border-radius: 6px;
     padding: 0 0 0 16px;
+    max-width: 250px;
 }
 
 #toc, #toc ul {
@@ -26,6 +27,12 @@
 
 #toc ul {
     padding-left: 16px;
+}
+
+#toc span {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    display: inline-block;
 }
 
 #toc li a {
